# alpha-screener

./: .coderabbit.yaml  .env.template  .gitignore  .gitleaks.toml  .handoff-issue-45.md  .handoff-issue-46.md  .markdownlint.json  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  CONTEXT.md  README.md  TARGET.md  TEST_DEEPSEEK.md  alembic.ini  install.sh  pyproject.toml
.ai/agents/: code-reviewer.md  dev-agent.md  fix-agent.md  issue-triage.md
.ai/prompts/: code-review.md  dev-agent.md  fix-agent.md  issue-triage.md
.claude/hooks/: block-dangerous-git.sh
.github/: PULL_REQUEST_TEMPLATE.md  pr_agent.toml
.github/workflows/: ai-changelog.yml  ai-issue-agent.yml  auto-merge.yml  pr_agent.yml  test.yml
alembic/: env.py
alembic/versions/: 57879e816e44_add_threshold_column_to_alpha_.py  7daf452b3a1e_initial_create_9_core_tables.py
alphascreener/: __init__.py  acceptance.py  alpha_acceptance.py  alternative_features.py  backtest.py  backtrader.py  cli.py  config.py  corporate_actions.py  display.py  evaluation.py  features.py  finra_short_interest.py  market_calendar.py  official_research_data.py  optimize.py  prediction_contract.py  ranking.py  research.py  research_features.py  sec_signals.py  universe.py
alphascreener/cost/: __init__.py  tracker.py
alphascreener/cross_validation/: __init__.py  comparator.py  diff_store.py  health_monitor.py
alphascreener/data/: __init__.py  io.py  locking.py  paths.py  sync.py  universe.py
alphascreener/data_sync/: __init__.py  orchestrator.py
alphascreener/db/: __init__.py  engine.py  ensure_schema.py  models.py
alphascreener/factors/: __init__.py  engine.py  formulas.py
alphascreener/feishu/: __init__.py  card.py  push.py  token.py
alphascreener/logging/: __init__.py  logger.py
alphascreener/monitoring/: __init__.py  cusum.py  sampler.py
scripts/: asc.sh  cleanup-merged-branches.sh  close-reopen.sh  dev-inspect.sh  dev-plan.sh  fetch-review.sh  lp-mr-cleanup.sh  run_and_push.py  watch-pr.sh
templates/: issue.md  runbook.md
tests/: test_ablation.py  test_alpha_acceptance.py  test_alternative_features.py  test_analyst_prompts.py  test_backtest.py  test_backtrader.py  test_bull_bear_pipeline.py  test_case_library.py  test_cli.py  test_config.py  test_corporate_actions.py  test_cost_tracker.py  test_cross_validation.py  test_cusum.py  test_data_io.py  test_db_schema.py  test_evaluation.py  test_factors.py  test_features.py  test_feishu.py  test_finra_short_interest.py  test_fmp_adapter.py  test_llm_invoker.py  test_logging.py  test_monitoring.py  test_official_research_data.py  test_optimize.py  test_orchestrator.py  test_papertrade.py  test_phase2.py  test_prediction_contract.py  test_ranking.py  test_research.py  test_research_features.py  test_scheduler.py  test_screening.py  test_sec_signals.py  test_stooq_adapter.py  test_sync.py  test_tradingagents_adapters.py  (+2 more)
(+52 files in other folders)
