[project]
name = "alpha-screener"
version = "0.1.0"
description = "CLI screener for 14-session US-equity breakout candidates"
requires-python = ">=3.11"
dependencies = [
    # 核心数值与数据处理
    "numpy>=1.26",
    "scipy>=1.11",
    "polars>=0.20",
    "pandas>=2.1",
    "pyarrow>=14",

    # TPE strategy used by the explicit optimization command
    "optuna>=3.0",

    # 回测
    "backtrader>=1.9.78",

    # 数据源
    "yfinance>=0.2.40",

    # 终端显示
    "rich>=13.0",
    "click>=8.1",

    # 存储
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # 系统支持
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.scripts]
asc = "alphascreener.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alphascreener*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
