[project]
name = "alpha-screener"
version = "0.1.0"
description = "CLI screener for 14-session US-equity breakout candidates"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    # 核心数值与数据处理
    "numpy>=1.26",
    "polars>=0.20",

    # 数据源
    "yfinance>=0.2.40",

    # 终端显示
    "rich>=13.0",
    "click>=8.1",

]

[project.scripts]
asc = "alphascreener.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alphascreener*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
